<resources>
    <string name="app_name">Task App</string>
    <string name="lbl_descrtiption">Description</string>
    <string name="lbl_due">Due Date</string>
    <string name="lbl_done">Done</string>
    <string name="btn_save">Save</string>
    <string name="btn_add">Add New Task</string>
    <string name="btn_delete">Delete</string>
    <string name="confirm_delete">Confirm Delete?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
</resources>
